working on tasksPage design

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
-    --color-dark: #242424;
-    --color-primary: #108ee9;
+    --color-red: #e53935;
+    --color-red-darker: #831c1a;
+    --main-font: 'Roboto';
 }
 
