--- a/src/features/add-task/ui/AddTask.module.scss
+++ b/src/features/add-task/ui/AddTask.module.scss
@@ -7,6 +7,7 @@
     height: 50px;
 
     border-radius: 5px;
+    background-color: var(--color-red);
 
     &:hover {
         background-color: var(--color-red-darker);
