--- a/src/widgets/tasks-list/ui/TasksList/TasksList.module.scss
+++ b/src/widgets/tasks-list/ui/TasksList/TasksList.module.scss
@@ -3,7 +3,9 @@
     align-items: center;
     gap: 30px;
 
+    margin-left: -5px;
     padding: 20px;
+    padding-left: 0;
 
     font-family: var(--main-font);
     font-weight: 500;
