--- a/src/pages/home/ui/HomePage.module.scss
+++ b/src/pages/home/ui/HomePage.module.scss
@@ -44,7 +44,11 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 20px;
+    padding-top: 40px;
+}
+
+.main {
+    margin-top: 65px;
 }
 
 .addTaskListContainer {
