--- a/src/pages/tasks-list/ui/TasksListPage.module.scss
+++ b/src/pages/tasks-list/ui/TasksListPage.module.scss
@@ -12,11 +12,26 @@
 }
 
 .info {
-    display: flex;
-
     margin-top: 50px;
 
     font-family: var(--main-font);
+
+    &::after {
+        content: "";
+
+        display: block;
+        width: 100%;
+        height: 2px;
+
+        margin-top: 20px;
+        margin-left: 70px;
+
+        background: linear-gradient(#EEE, #FFF);
+    }
+}
+
+.infoCenterer {
+    display: flex;
 }
 
 .progress {
@@ -29,18 +44,6 @@
     flex-grow: 1;
 
     margin-left: 16px;
-
-    &::after {
-        content: "";
-
-        display: block;
-        width: 100%;
-        height: 2px;
-
-        margin-top: 20px;
-
-        background: linear-gradient(#EEE, #FFF);
-    }
 }
 
 .listName {
@@ -54,7 +57,18 @@
     color: rgba(0, 0, 0, 0.4)
 }
 
+.tasksListCenterer {
+    display: flex;
+    flex-direction: column;
+}
+
 .addTaskButton {
     margin-left: auto;
     margin-top: 40px;
+}
+
+@media (min-width: 900px) {
+    .info::after {
+        margin-left: calc((100% - 760px) / 2);
+    }
 }
