--- a/src/widgets/tasks-list/ui/TasksList/TasksList.module.scss
+++ b/src/widgets/tasks-list/ui/TasksList/TasksList.module.scss
@@ -4,8 +4,7 @@
     gap: 30px;
 
     margin-left: -5px;
-    padding: 20px;
-    padding-left: 0;
+    padding: 20px 0;
 
     font-family: var(--main-font);
     font-weight: 500;
@@ -39,4 +38,8 @@
     background-color: var(--color-red);
 
     transform: translateY(-50%);
+}
+
+.deleteTask {
+    margin-left: auto;
 }
