working with localstore

--- a/src/widgets/tasks-list/ui/TasksListCard/TasksListCard.module.scss
+++ b/src/widgets/tasks-list/ui/TasksListCard/TasksListCard.module.scss
@@ -10,7 +10,7 @@
 
     font-family: var(--main-font);
 
-    background-color: blueviolet;
+    background-color: var(--color-red);
     border-radius: 10px;
     overflow: hidden;
 }
